<resources>

  <string name="app_name">Hey Beach</string>

  <!-- Beaches list screen -->
  <string name="beaches_list_title">Hey Beach</string>
  <string name="beaches_list_menu_account">Account</string>
  <string name="beaches_item_title_label">Image title:</string>

  <!-- Login screen -->
  <string name="login_toolbar_title">Login</string>
  <string name="login_button_login">Login</string>
  <string name="login_hint_email">Email</string>
  <string name="login_hint_password">Password</string>
  <string name="login_text_no_account_yet">No account, yet?</string>
  <string name="login_button_register">Register</string>
  <string name="login_failure_message">Login failed.</string>

  <!-- Registration screen -->
  <string name="registration_toolbar_title">Registration</string>
  <string name="registration_button_register">Register</string>
  <string name="registration_hint_email">Email</string>
  <string name="registration_hint_password">Password</string>
  <string name="registration_failure_message">User registration failed.</string>

  <!-- Account screen -->
  <string name="account_toolbar_title">Account</string>
  <string name="account_label_user_id">User ID:</string>
  <string name="account_label_user_email">Email:</string>
  <string name="account_button_logout">Logout</string>
  <string name="account_logout_failure_message">Logout failed.</string>

</resources>
