<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <EditText
      android:id="@+id/email_field"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/login_hint_email"
      android:inputType="textEmailAddress"/>

  <EditText
      android:id="@+id/password_field"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:hint="@string/login_hint_password"/>

  <Button
      android:id="@+id/login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login_button_login"/>

  <ProgressBar
      android:id="@+id/progress_indicator"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_marginBottom="50dp"
      android:layout_gravity="center_horizontal"
      android:visibility="invisible"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/login_text_no_account_yet"/>

  <Button
      android:id="@+id/registration_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_gravity="center"
      android:text="@string/login_button_register"/>


</LinearLayout>